# wordle-bot

./: .gitignore  README  README.md  analysis.py  analysis_improved.py  analysis_pd.py  functions.py  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt  tmp.py  wordle-bot.py  wordleClass.py  wordleTest.py
imports/: import_wordlist.py
src/wordleBot/: __init__.py  __main__.py  cli.py  functions.py  wordleBot.py  wordleClass.py  wordleSolver.py
tests/: test_cli.py  test_speed.py  test_wordleSolver.py  wordle.py
