[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordleBot"
version = "0.0.1"
description = "A bot to solve wordle"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/9qUmV4/wordle-bot"
"Bug Tracker" = "https://github.com/9qUmV4/wordle-bot/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]